# 5560try

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train_cnn.py
app/: main.py
models/: cnn.py
